# salt-portal-backup

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: example_python_code.py
src/salt_portal_backup/: __about__.py  __init__.py  backup.py  database.py  salt_portal.py  web_scraping.py
tests/: __init__.py
